--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,10 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 
 body {
-  padding:50px;
-  font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#777;
-  font-weight:300;
+  font:16px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color:black;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -33,7 +31,7 @@ h3, h4, h5, h6 {
 }
 
 a {
-  color:#39c;
+  color:#008BD1;
   font-weight:400;
   text-decoration:none;
 }
@@ -46,7 +44,7 @@ a small {
 }
 
 .wrapper {
-  width:860px;
+  width:700px;
   margin:0 auto;
 }
 
@@ -99,6 +97,7 @@ header {
   width:270px;
   float:left;
   position:fixed;
+  display: none;
 }
 
 header ul {
@@ -160,8 +159,8 @@ header ul a strong {
 }
 
 section {
-  width:500px;
-  float:right;
+  padding-top: 25px;
+  width:700px;
   padding-bottom:50px;
 }
 
@@ -177,10 +176,6 @@ hr {
 }
 
 footer {
-  width:270px;
-  float:left;
-  position:fixed;
-  bottom:50px;
 }
 
 @media print, screen and (max-width: 960px) {
