Added sources and outline.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -31,9 +31,13 @@ h3, h4, h5, h6 {
 }
 
 a {
-  color:#008BD1;
+  color:#00496E;
   font-weight:400;
   text-decoration:none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 a small {
@@ -180,6 +184,7 @@ img.hover {
 }
 
 footer {
+    text-align: center;
 }
 
 @media print, screen and (max-width: 960px) {
